--- a/clientes-app/src/app/servico-prestado/servico-prestado-form/servico-prestado-form.component.html
+++ b/clientes-app/src/app/servico-prestado/servico-prestado-form/servico-prestado-form.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-<h1 class="mt-4">Serviço Prestado</h1>
+<h1 class="mt-4">Serviço</h1>
 <ol class="breadcrumb mb-4">
     <li class="breadcrumb-item active">Novo</li>
 </ol>
@@ -9,7 +9,7 @@
         <div class="row">
             <div class="col-md-12">
                 <div class="alert alert-success" role="alert" *ngIf="success == true">
-                    Serviço Prestado salvo com sucesso 
+                    Serviçobg-dark salvo com sucesso 
                 </div>
                 <div class="alert alert-danger" role="alert" *ngFor="let erro of errors">
                     {{erro}}
