--- a/clientes-app/src/app/login/login.component.html
+++ b/clientes-app/src/app/login/login.component.html
@@ -1,4 +1,4 @@
-<div class="bg-primary">
+<div>
     <div id="layoutAuthentication">
         <div id="layoutAuthentication-content">
             <main>
