--- a/clientes-app/src/app/servico-prestado/servico-prestado-lista/servico-prestado-lista.component.html
+++ b/clientes-app/src/app/servico-prestado/servico-prestado-lista/servico-prestado-lista.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <h1 class="mt-4">Serviço Prestado</h1>
+  <h1 class="mt-4">Serviço</h1>
   <ol class="breadcrumb mb-4">
     <li class="breadcrumb-item active">Consulta</li>
   </ol>
