--- a/clientes-app/src/styles.css
+++ b/clientes-app/src/styles.css
@@ -6067,7 +6067,7 @@ a.close.disabled {
 }
 
 .bg-primary {
-  background-color: #007bff !important;
+ background-color: #007bff !important;
 }
 
 a.bg-primary:hover, a.bg-primary:focus,
@@ -6137,7 +6137,7 @@ button.bg-light:focus {
 }
 
 .bg-dark {
-  background-color: #343a40 !important;
+  background-color: #004085 !important;
 }
 
 a.bg-dark:hover, a.bg-dark:focus,
